ascent_macro_tests/tests/macros/fail/non_existent_macro.err.txt
error: undefined macro
 --> /tests/macros/fail/non_existent_macro.rs:7:5
  |
7 |     non_existent_macro!();
  |     ^^^^^^^^^^^^^^^^^^
